Add project 0 folder

--- a/project_0/game.ipynb
+++ b/project_0/game.ipynb
@@ -10,8 +10,8 @@
   {
    "cell_type": "code",
    "source": [
-    "from main import score_game\n",
-    "from main import game_core"
+    "from project_0.main import score_game\n",
+    "from project_0.main import game_core"
    ],
    "metadata": {
     "ExecuteTime": {
