--- a/project_2/main.ipynb
+++ b/project_2/main.ipynb
@@ -43,10 +43,10 @@
   {
    "cell_type": "code",
    "source": [
-    "DBNAME = 'project_sql'\n",
-    "USER = 'skillfactory'\n",
-    "PASSWORD = 'cCkxxLVrDE8EbvjueeMedPKt'\n",
-    "HOST = '84.201.134.129'\n",
+    "DBNAME = ''\n",
+    "USER = ''\n",
+    "PASSWORD = ''\n",
+    "HOST = ''\n",
     "PORT = 5432"
    ],
    "metadata": {
