--- a/project_2/main.ipynb
+++ b/project_2/main.ipynb
@@ -28,37 +28,40 @@
    "metadata": {
     "id": "dccfde33-2452-43fb-a8a5-5c6ebc02a71d",
     "ExecuteTime": {
-     "end_time": "2025-02-04T14:18:50.750261Z",
-     "start_time": "2025-02-04T14:18:50.747628Z"
+     "end_time": "2025-02-05T16:13:54.351472Z",
+     "start_time": "2025-02-05T16:13:53.975937Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "import psycopg2"
+    "from dotenv import load_dotenv\n",
+    "import os"
    ],
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "source": [
-    "DBNAME = ''\n",
-    "USER = ''\n",
-    "PASSWORD = ''\n",
-    "HOST = ''\n",
-    "PORT = 5432"
+    "load_dotenv()\n",
+    "\n",
+    "DBNAME = os.getenv('DBNAME')\n",
+    "USER = os.getenv('DBUSER')\n",
+    "PASSWORD = os.getenv('PASSWORD')\n",
+    "HOST = os.getenv('HOST')\n",
+    "PORT = os.getenv('PORT')"
    ],
    "metadata": {
     "id": "oVKH4ehvf8Ay",
     "ExecuteTime": {
-     "end_time": "2025-02-04T14:18:50.768576Z",
-     "start_time": "2025-02-04T14:18:50.766537Z"
+     "end_time": "2025-02-05T16:13:55.114006Z",
+     "start_time": "2025-02-05T16:13:55.110908Z"
     }
    },
    "id": "oVKH4ehvf8Ay",
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -66,13 +69,13 @@
    "metadata": {
     "id": "G4X_q8KBf7SF",
     "ExecuteTime": {
-     "end_time": "2025-02-04T14:18:50.855351Z",
-     "start_time": "2025-02-04T14:18:50.852701Z"
+     "end_time": "2025-02-05T16:13:57.020284Z",
+     "start_time": "2025-02-05T16:13:56.978541Z"
     }
    },
    "id": "G4X_q8KBf7SF",
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -100,8 +103,8 @@
    "metadata": {
     "id": "bc39e68e-ed02-4ee2-9235-7258a2f867a8",
     "ExecuteTime": {
-     "end_time": "2025-02-04T14:18:50.902585Z",
-     "start_time": "2025-02-04T14:18:50.900658Z"
+     "end_time": "2025-02-05T16:13:59.040289Z",
+     "start_time": "2025-02-05T16:13:59.038165Z"
     }
    },
    "source": [
@@ -112,7 +115,7 @@
     "'''"
    ],
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -124,8 +127,8 @@
    "metadata": {
     "id": "7mAwtsk4hEHY",
     "ExecuteTime": {
-     "end_time": "2025-02-04T14:18:53.291935Z",
-     "start_time": "2025-02-04T14:18:50.909323Z"
+     "end_time": "2025-02-05T16:14:02.956082Z",
+     "start_time": "2025-02-05T16:14:00.237079Z"
     }
    },
    "id": "7mAwtsk4hEHY",
@@ -138,7 +141,7 @@
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
